--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,11 @@
 [build]
-  command = "gatsby build"
+  command = "npm run build"
   publish = "public"
-  functions = "netlify/functions"
 
 [build.environment]
-  NODE_VERSION = "16"
-  NPM_VERSION = "8"
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[functions]
-  node_bundler = "esbuild"
