--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,16 @@
 [build]
-  command = "npm run build"
+  command = "gatsby build"
   publish = "public"
+  functions = "netlify/functions"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "16"
+  NPM_VERSION = "8"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[functions]
+  node_bundler = "esbuild"
